--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,11 @@
     "concurrently": "^9.1.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/express": "^5.0.1"
